@@ -25,8 +25,9 @@ Release:    v2014012409
 	> Logger class renamed in SDK.
 	> Gradelib file included in cron.
 	> Scope of tool tipster anti-aliasing fixed to not affect whole of Moodle.
-	> Date of late submissions indicated in red
-	> Oracle database error when getting forum post
+	> Date of late submissions indicated in red.
+	> Oracle database error when getting forum post.
+	> Inbox hidden columns fixed if Grademark is disabled.
 
 ####################################################################################
 
