@@ -233,9 +233,10 @@ jQuery(document).ready(function($) {
         } else if ((i == 7 && showOrigReport) || ((i == 7 && !showOrigReport) || (i == 9 && useGrademark))) {
             submissionsDataTableColumnDefs.push({"sClass": "right", "aTargets": [ i ], "iDataSort": [ i-1 ], "sType":"numeric"});
         } else if (i == 1 || ((i >= 6 && !showOrigReport && !useGrademark)
-                                || (i >= 8 && (!showOrigReport && useGrademark) || (showOrigReport && !useGrademark)) || (i >= 10 && showOrigReport && useGrademark))) {
+                                || (i >= 8 && ((!showOrigReport && useGrademark) || (showOrigReport && !useGrademark))) 
+                                || (i >= 10 && showOrigReport && useGrademark))) {
             submissionsDataTableColumnDefs.push({"sClass": "center", "bSortable": false, "aTargets": [ i ]});
-        } else if ((i == 0) || (i == 6 && showOrigReport) || (i == 6 && !showOrigReport) || (i == 8 && useGrademark)) {
+        } else if ((i == 0) || (i == 6 && showOrigReport) || ((i == 6 && !showOrigReport) || (i == 8 && useGrademark))) {
             submissionsDataTableColumnDefs.push({"bVisible": false, "aTargets": [ i ]});
         }
     }
